RESOLVED FIXED99663
REGRESSION(r130411): Copying & pasting the first line of text can move caret to the end of text area
https://bugs.webkit.org/show_bug.cgi?id=99663
Summary REGRESSION(r130411): Copying & pasting the first line of text can move caret ...
Ryosuke Niwa
Reported 2012-10-17 17:05:44 PDT
Created attachment 169305 [details] Demo Reproduction steps 1. Open the attached document 2. Copy (control+c or command+c) 3. Paste (control+v or command+v) Expected result: The caret stays at the end of the first line Actual result: The caret moves to the end of the second line
Attachments
Demo (354 bytes, text/html)
2012-10-17 17:05 PDT, Ryosuke Niwa
no flags
Fixes the bug (4.77 KB, patch)
2012-10-18 14:31 PDT, Ryosuke Niwa
no flags
Fixed more bugs (5.45 KB, patch)
2012-10-18 16:31 PDT, Ryosuke Niwa
no flags
Removed hard tabs (5.44 KB, patch)
2012-10-18 16:33 PDT, Ryosuke Niwa
enrica: review+
Ryosuke Niwa
Comment 1 2012-10-17 17:16:52 PDT
Ryosuke Niwa
Comment 2 2012-10-17 17:17:15 PDT
Ryosuke Niwa
Comment 3 2012-10-18 14:31:32 PDT
Created attachment 169477 [details] Fixes the bug
Levi Weintraub
Comment 4 2012-10-18 14:33:12 PDT
Comment on attachment 169477 [details] Fixes the bug LGTM. Thanks for the descriptive ChangeLog.
Ryosuke Niwa
Comment 5 2012-10-18 16:24:24 PDT
Comment on attachment 169477 [details] Fixes the bug Turns out that there are more bugs in this code :(
Ryosuke Niwa
Comment 6 2012-10-18 16:31:08 PDT
Created attachment 169501 [details] Fixed more bugs
Ryosuke Niwa
Comment 7 2012-10-18 16:33:56 PDT
Created attachment 169503 [details] Removed hard tabs
Enrica Casucci
Comment 8 2012-10-18 16:47:47 PDT
Comment on attachment 169503 [details] Removed hard tabs View in context: https://bugs.webkit.org/attachment.cgi?id=169503&action=review Looks good to me. Just fix the ChangeLogs :-) > Source/WebCore/ChangeLog:6 > + Reviewed by Levi Weintraub. Remove review by Levi > LayoutTests/ChangeLog:6 > + Reviewed by Levi Weintraub. Remove reviewed by Levi.
Ryosuke Niwa
Comment 9 2012-10-18 16:56:22 PDT
Note You need to log in before you can comment on or make changes to this bug.